# company-os

./: .env.tpl  .gitignore  CLAUDE.md  README.md  company-os.config.example.sh  setup.sh
.claude/: settings.json  settings.local.json.example
evals/promptfoo/: README.md  promptfooconfig.yaml
mcps/notion-mcp/: README.md  pyproject.toml
mcps/notion-mcp/src/notion_mcp/: __init__.py  block_types.py  property_types.py  server.py
mcps/notion-mcp/tests/: test_block_types.py  test_property_types.py
mcps/obsidian-mcp/: .env.example  README.md  pyproject.toml
mcps/obsidian-mcp/src/obsidian_mcp/: __init__.py  config.py  converters.py  git_sync.py  server.py  vault_client.py
mcps/plaud-mcp/: README.md  SETUP.md  enrich_names.py  pyproject.toml
mcps/vault-mcp/: .gitignore  README.md  emails.example.json  oauth.ts  package.json  server.ts  users.example.json
setup/: init.sh  verify.sh
setup/lib/: colors.sh  utils.sh
setup/steps/: 01-cli.sh  02-ssh.sh  03-apps.sh  04-1password.sh  05-skills.sh  06-mcps.sh  07-daemon.sh  08-vault.sh  09-verify.sh  10-summary.sh
skills/decide/: SKILL.md
skills/eval/: SKILL.md  requirements.txt  run_eval.py
skills/explain/: SKILL.md  requirements.txt
skills/focus/: SKILL.md
skills/interview/: SKILL.md
skills/learn/: SKILL.md
skills/legal/: SKILL.md  redline_helper.py  summary_pdf.py
skills/momtest/: SKILL.md  reference.md
skills/search/: SKILL.md  requirements.txt
skills/setup/: SKILL.md
skills/source/: SKILL.md  (+2 more)
tests/: test_makefile.sh  test_no_stale_refs.sh  test_paths.sh  test_setup.sh  test_setup_steps.sh
(+92 files in other folders)
