[project]
name = "notion-mcp"
version = "0.2.0"
description = "Notion MCP with full property type support for databases, blocks, pages, comments, and users"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
notion-mcp = "notion_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_mcp"]
