[project]
name = "obsidian-mcp"
version = "0.1.0"
description = "MCP server for Obsidian vault with read/write operations and markdown optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.25.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
obsidian-mcp = "obsidian_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_mcp"]
